price add and remove + bug fix

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 
              <div class="content-container">   
                 <p id="bold">Total Price</p>
-                <h4 id="order-price">$ 12 </h4>
+                <h4 id="total-price">$ 0 </h4>
              </div>
              
             <button id="complete-btn">Complete Order </button>
