--- a/index.html
+++ b/index.html
@@ -29,14 +29,15 @@
                 <h4 id="total-price">$ 0 </h4>
              </div>
              
-            <button id="complete-btn" data-complete-btn="complete-btn">Complete Order </button>
+            <button class="primary-btn" id="complete-btn" data-complete-btn="complete-btn">Complete Order </button>
         </section>
-        <div class="modal"> 
+        <div class="modal" id="modal">
             <form id="modal__customer-info">
-                <input type="text" name="customerName" id="customerName" placeholder="Enter Full Name">
-                <input type="text" name="cardNumber" id="cardNumber" placeholder="Enter Card Number">
-                <input type="text" name="cardCVV" id="cardCVV" placeholder="Enter Card CVV">
-                <button type="submit">Pay</button>
+                <button class="secondary-btn modal__back-btn" id="back-btn" type="button">Back</button> 
+                <input type="text" name="customerName" id="customerName" placeholder="Enter Full Name" required>
+                <input type="number" name="cardNumber" id="cardNumber" placeholder="Enter Card Number" required>
+                <input type="number" name="cardCVV" id="cardCVV" placeholder="Enter Card CVV" required>
+                <button class="primary-btn" type="submit">Pay</button>
             </form>
         </div>
          
